# kemist

./: Database.csv  db1.csv  example_molecules.csv  kemist.sqlite3.sql  main.py  pyproject.toml  test.sqlite3
data/: Database information test.csv  Database information test2.csv  db1.csv  db2.csv  example_storage.csv  test_db.csv  test_storage.csv
kemist/: __init__.py  kemist_db.py
kemist/apps/: __init__.py  arg_parsers.py  confirmation_utils.py  csv_loader.py  entry_points.py  kemist.py  kemist_db.py
kemist/config/: config_manager.py
kemist/core/: __init__.py  logging_utils.py  molecule.py  storage_unit.py
kemist/database/: __init__.py  build_request.py  csv_loader.py  database.py  database_manager.py  db_management.py  request_adapters.py
kemist2/config/: config_manager.py
kemist2/core/: __init__.py  logging_utils.py  molecule.py  storage_unit.py
tests/: test_molecules.py
