[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kemist"
version = "0.0.1"
dependencies = [
    "fuzzysearch",
    'CIRpy @ git+https://github.com/Yuki-cpp/CIRpy.git@master',
    "appdirs",
    "configparser",
    "argformat"
]

[tool.setuptools.packages]
find = { }

[project.scripts]
kemist-db = "kemist.apps.entry_points:kemist_db"
kemist = "kemist.apps.entry_points:kemist"